[gd_scene load_steps=5 format=3 uid="uid://b2de8c80dj8ho"]

[ext_resource type="ArrayMesh" uid="uid://dtbhyrmmux0sy" path="res://assets/models/heist map.obj" id="1_3x4fm"]
[ext_resource type="Script" path="res://scenes/levels/level_manager.gd" id="1_j4ypp"]
[ext_resource type="PackedScene" uid="uid://daelj74dp0uba" path="res://assets/blender/heist map.blend" id="3_t2qlr"]

[sub_resource type="BoxShape3D" id="BoxShape3D_cb1xf"]
size = Vector3(2.07531, 0.618938, 1.31074)

[node name="level_1" type="Node3D"]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 92.1084, 0)

[node name="level_manager" type="Node3D" parent="."]
script = ExtResource("1_j4ypp")

[node name="money_bag_spawn" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.44642, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
visible = false
mesh = ExtResource("1_3x4fm")
skeleton = NodePath("")

[node name="base_red" type="Area3D" parent="." groups=["base", "red"]]
transform = Transform3D(16.83, 0, 0, 0, 16.83, 0, 0, 0, 16.83, 0, 6.231, 54.103)

[node name="CollisionShape3D" type="CollisionShape3D" parent="base_red"]
shape = SubResource("BoxShape3D_cb1xf")

[node name="base_blue" type="Area3D" parent="." groups=["base", "blue"]]
transform = Transform3D(16.83, 0, 0, 0, 16.83, 0, 0, 0, 16.83, 0, 6.231, -54.103)

[node name="CollisionShape3D" type="CollisionShape3D" parent="base_blue"]
shape = SubResource("BoxShape3D_cb1xf")

[node name="base_green" type="Area3D" parent="." groups=["base", "green"]]
transform = Transform3D(-7.35663e-07, 0, 16.83, 0, 16.83, 0, -16.83, 0, -7.35663e-07, 54.103, 6.231, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="base_green"]
shape = SubResource("BoxShape3D_cb1xf")

[node name="base_yellow" type="Area3D" parent="." groups=["base", "yellow"]]
transform = Transform3D(-7.35663e-07, 0, 16.83, 0, 16.83, 0, -16.83, 0, -7.35663e-07, -54.103, 6.231, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="base_yellow"]
shape = SubResource("BoxShape3D_cb1xf")

[node name="heist map" parent="." instance=ExtResource("3_t2qlr")]
transform = Transform3D(0.765, 0, 0, 0, 0.765, 0, 0, 0, 0.765, 0, 0, 0)

[connection signal="body_entered" from="base_red" to="level_manager" method="_on_base_red_body_entered"]
[connection signal="body_entered" from="base_blue" to="level_manager" method="_on_base_blue_body_entered"]
[connection signal="body_entered" from="base_green" to="level_manager" method="_on_base_green_body_entered"]
[connection signal="body_entered" from="base_yellow" to="level_manager" method="_on_base_yellow_body_entered"]
